[Add] Add WS tests