@@ -16,12 +16,72 @@
     <artifactId>web-services</artifactId>
     <packaging>war</packaging>
 
-    <properties>
-        <versions.tomee.embedded>1.7.3</versions.tomee.embedded>
-    </properties>
+	<properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <versions.tomee.embedded>1.7.3</versions.tomee.embedded>
+
+      <!-- Stable versions -->
+      <versions.javaee>6.0-6</versions.javaee>
+      <versions.openejb>4.7.3</versions.openejb>
+      <versions.tomee>1.7.3</versions.tomee>
+	</properties>
+	
+	<repositories>
+        <!-- Snapshot repository to access to the latest version of the OpenEJB framework -->
+        <repository>
+            <id>apache-m2-snapshot</id>
+            <name>Apache Snapshot Repository</name>
+            <url>https://repository.apache.org/content/groups/snapshots</url>
+        </repository>
+    </repositories>
 
 	<!-- What I Need -->
     <dependencies>
+	<dependency>
+          <groupId>org.apache.openejb</groupId>
+          <artifactId>javaee-api</artifactId>
+          <version>${versions.javaee}</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.openejb</groupId>
+          <artifactId>openejb-core</artifactId>
+          <version>${versions.openejb}</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.openejb</groupId>
+          <artifactId>tomee-embedded</artifactId>
+          <version>${versions.tomee}</version>
+          <scope>test</scope>
+      </dependency>
+		  <!-- Dependencies for the testing frameworks (Junit & Arquillian) -->
+		  <dependency>
+			  <groupId>junit</groupId>
+			  <artifactId>junit</artifactId>
+			  <version>4.12</version>
+			  <scope>test</scope>
+		  </dependency>
+		  <dependency>
+			  <groupId>org.jboss.arquillian.junit</groupId>
+			  <artifactId>arquillian-junit-container</artifactId>
+			  <version>1.1.5.Final</version>
+			  <scope>test</scope>
+		  </dependency>
+		  <dependency>
+			  <groupId>org.jboss.shrinkwrap.resolver</groupId>
+			  <artifactId>shrinkwrap-resolver-depchain</artifactId>
+			  <version>2.1.1</version>
+			  <type>pom</type>
+			  <scope>test</scope>
+		  </dependency>
+		  <!-- Application server: Tomee -->
+		  <dependency>
+			  <groupId>org.apache.openejb</groupId>
+			  <artifactId>arquillian-tomee-embedded</artifactId>
+			  <version>${versions.tomee.embedded}</version>
+			  <scope>test</scope>
+		  </dependency>
         <dependency>
             <groupId>fr.unice.polytech.isa.g1</groupId>
             <artifactId>exceptions</artifactId>
@@ -41,47 +101,10 @@
         </dependency>
         <dependency>
             <groupId>fr.unice.polytech.isa.g1</groupId>
-            <artifactId>cart-cashier</artifactId>
+            <artifactId>cart-cashier-kitchen</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!-- Dependencies for the testing frameworks (Junit, Mockito & Arquillian) -->
-        <dependency>
-            <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-container</artifactId>
-            <version>1.1.5.Final</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.shrinkwrap.resolver</groupId>
-            <artifactId>shrinkwrap-resolver-depchain</artifactId>
-            <version>2.1.1</version>
-            <type>pom</type>
-            <scope>test</scope>
-        </dependency>
-        <!-- Application server: Tomee -->
-        <dependency>
-            <groupId>org.apache.openejb</groupId>
-            <artifactId>arquillian-tomee-embedded</artifactId>
-            <version>${versions.tomee.embedded}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.openejb.maven</groupId>
-                <artifactId>tomee-maven-plugin</artifactId>
-                <version>${versions.tomee.embedded}</version>
-                <configuration>
-                    <!-- From TomEE to TomEE+ to support the web services stack -->
-                    <tomeeClassifier>plus</tomeeClassifier>
-                    <args>-Xmx512m -XX:PermSize=256m</args>
-                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 	
 	<!-- PUSH ME UP, OoOOOOoh ARTIFACTORYYYY!-->
     <distributionManagement>
